# docker-devcontainer

./: .gitlab-ci.yml  .gitmodules  Docker.test.yml  Docker2.test.yml  Dockerfile  LICENSE  README.md  Taskfile.yml  package.json  package.json.liquid  pnpm-lock.yaml  pyproject.toml  start.sh
.config/: common-keywords.json  nodemon.json  package-lock.json  variables.json
.config/docs/: blueprint-contributing-codeclimate.md  blueprint-contributing.md  blueprint-readme-ansible-molecule.md  blueprint-readme-app.md  blueprint-readme-ci-pipeline-slim.md  blueprint-readme-ci-pipeline.md  blueprint-readme-codeclimate.md  blueprint-readme-docker-compose.md  blueprint-readme-software.md  variables.json
.config/docs/contributing/: codeclimate.md  getting-started.md  linting.md  overview.md  pull-requests.md  requirements.md  testing.md
.config/docs/local/: package-lock.json
.config/docs/readme/: build-tools.md  requirements.md  slim-build.md  subheader.md
.config/docs/readme-app/: overview.md
.config/docs/readme-codeclimate/: example.md  overview.md  philosophy.md
.config/docs/readme-docker-compose/: overview.md
.config/taskfiles/docker/: Taskfile-test.yml
.devcontainer/: devcontainer.json
docs/: CONTRIBUTING.md
local/: Taskfile-project.yml  package-lock.json  package.json  pyproject.toml
scripts/: common.sh  desktop.sh  dind.sh  homebrew.sh  sshd.sh
test/structure/: devcontainer.yml
